--- a/404.html
+++ b/404.html
@@ -1,7 +1,7 @@
 ---
 layout: default
 description: "你来到了没有知识的荒原 :("
-header-img: "assets/404-bg.jpg"
+header-img: "assets/网站素材/404-bg.jpg"
 permalink: /404.html
 ---
 
