--- a/tags.html
+++ b/tags.html
@@ -2,7 +2,7 @@
 layout: default
 title: Tags
 description: 永远年轻, 永远热泪盈眶
-header-img: "assets/tags-bg.jpg"
+header-img: "assets/网站素材/tags-bg.jpg"
 ---
 
 <!-- Page Header -->
