--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: "About"
 description: "Hey, this is Liu Peng."
-header-img: "assets/about-bg.jpg"
+header-img: "assets/网站素材/about-bg.jpg"
 ---
 
 <!-- Language Selector -->
